traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: localhost
    http:
      paths: 
      - path: /
      backend:
        serviceName: traefik-web-ui
        servicePort: admin
